src/objects/OAuthService__c.object
<CustomObject>
    <fields>
        <fullName>Access_Token_URL__c</fullName>
        <label>Access Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Token__c</fullName>
        <label>Application Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorization_URL__c</fullName>
        <label>Authorization URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BaseURL__c</fullName>
        <description>EG https://sandbox-quickbooks.api.intuit.com/v3/company/ 
OR https://qb.sbfinance.intuit.com/v3/company/  for prod</description>
        <inlineHelpText>EG https://sandbox-quickbooks.api.intuit.com/v3/company/ 
OR https://qb.sbfinance.intuit.com/v3/company/  for prod</inlineHelpText>
        <label>BaseURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallbackUrl__c</fullName>
        <label>CallbackUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Key__c</fullName>
        <label>Consumer Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Secret__c</fullName>
        <label>Consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuickBooks_URL__c</fullName>
        <label>QuickBooks URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Request_Token_URL__c</fullName>
        <label>Request Token URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfxId__c</fullName>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>OAuthService</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>OAuthService Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OAuthService</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>